feat(phase9): finalize reporting & user management hardening and document core business rules